# clasper-control-plane-starter

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  plugin-config.json  pyproject.toml
docs/: API.md  PLUGIN_SYSTEM.md  README.md
plugins/prompt_guard/: openclaw.plugin.json  plugin.py
plugins/qmd_plugin/: SKILL.md  openclaw.plugin.json  plugin.py
plugins/sample_plugin/: openclaw.plugin.json  plugin.py
src/clasper_control_plane_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/control_plane/: auth.py  config.py  main.py  models.py  store.py
src/control_plane/plugins/: loader.py  manifest.py  registry.py  runtime.py
tests/: test_contract.py  test_plugins.py
workspace/: AGENTS.md  SOUL.md
